@@ -23,7 +23,7 @@ useDynLib(tools, .registration = TRUE)
 export("Adobe_glyphs", "HTMLheader", "Rd2HTML", "Rd2ex", "Rd2latex",
        "Rd2txt", "Rd2txt_options", "RdTextFilter", "Rd_db", "Rdiff",
        "Rdindex", "SweaveTeXFilter",
-       "add_datalist", "assertCondition", "bibstyle",
+       "add_datalist", "assertCondition", "bibstyle", "buildVignette",
        "buildVignettes", "charset_to_Unicode", "checkDocFiles",
        "checkDocStyle", "checkFF", "checkMD5sums", "checkNEWS",
        "checkRd", "checkPoFile", "checkPoFiles", "checkRdaFiles",
