@@ -1,0 +1,14 @@
+# ${R_HOME}/bin/weave -*- sh -*-
+
+R_EXE="${R_HOME}/bin/R"
+
+R_SWEAVE_OPTIONS=${R_SWEAVE_OPTIONS:='--no-restore --slave'}
+
+args=
+while test -n "${1}"; do
+  ## quote each argument here, unquote in R code.
+  args="${args}nextArg${1}"
+  shift
+done
+
+echo "utils:::.Sweave()" | "${R_EXE}" $R_SWEAVE_OPTIONS --args ${args}
